# fsi-fraud-detection-dab

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: databricks-cicd.yml
resources/: fsi_fraud_job.yml  fsi_fraud_pipeline.yml
scripts/: setup-self-hosted-runner.md
src/: 00-FSI-fraud-detection-introduction-lakehouse.sql  config.py
src/01-Data-ingestion/01.1-sdp-sql/: 01-SDP-fraud-detection-SQL.sql
src/01-Data-ingestion/01.1-sdp-sql/explorations/: sample_exploration.sql
src/01-Data-ingestion/01.1-sdp-sql/transformations/: 01-bronze.sql  02-silver.sql  03-gold.sql
src/01-Data-ingestion/01.2-sdp-python/transformations/: 01-bronze.py  02-silver.py  03-gold.py
src/02-Data-governance/: 02-UC-data-governance-ACL-fsi-fraud.sql
src/03-BI-data-warehousing/: 03-BI-Datawarehousing-fraud.sql
src/04-Data-Science-ML/: 01_feature_engineering.py  02_model_training_hpo.py  03_model_registration.py  04_challenger_validation.py  04b_challenger_approval.py  05_batch_inference.py  06_realtime_serving.py  07_model_monitoring.py  08_drift_detection.py  09_explainability_fairness.py
src/05-Generative-AI/: 05.1-AI-Functions-Creation.py  05.2-Agent-Creation-Guide.py
src/06-Workflow-orchestration/: 06-Workflow-orchestration-fsi-fraud.py
src/_resources/: 00-setup.py
src/lib/: __init__.py  fairness.py
tests/: test_fairness.py
